--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -46,3 +46,21 @@
         transform: scale(1);
     }
 }
+
+@keyframes slideTitleIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-40px);
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(8px);
+    }
+    80% {
+        transform: translateY(-3px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
